Website: fix layout of header on mobile
On some mobile devices, the tag line word-wraps. This causes the text to
consume more than two rows. However, the grid cell's height is
2*lineheight. This means that the tag line text overflows the cell.

Force the cell to be at least as tall as the tag line text, fixing the
overflow.

Fixing the cell's height introduces another issue: Dusty gets pushed
down, because she has align-self:end. Pushing her back up with
align-self:start causes another issue: she's too high up. Fix this issue
by putting a top margin on <header> instead of on individual grid items.

Also, fix Dusty's height to match the layout of a two-line tag line
exactly.

--- a/website/public/main.css
+++ b/website/public/main.css
@@ -15,13 +15,17 @@ figure {
   margin-bottom: 1rem;
 }
 
-h1 {
+header {
   margin-top: 1rem;
+}
+
+h1 {
+  margin-top: 0;
   margin-bottom: 0;
 }
 
 header nav.main-nav {
-  margin-top: 1rem;
+  margin-top: 0;
   text-align: right;
 }
 header nav.main-nav > ul {
@@ -114,8 +118,9 @@ header nav.main-nav li li:first-child .current-page:before {
 }
 
 header {
-  --tag-line-height: calc(2rem * 1.2);
-  --mascot-height: calc(3rem + var(--tag-line-height));
+  --tag-line-height: calc(1rem + 2rem * 1.2); /* Assumes two lines. */
+  --title-height: calc(2rem * 1.2); /* Assumes no word-wrapping. */
+  --mascot-height: calc(var(--title-height) + var(--tag-line-height));
   --mascot-width: var(--mascot-height) / 874.176 * 1126.752;
   display: grid;
   grid-template-areas:
@@ -123,7 +128,7 @@ header {
     "mascot tag-line main-nav"
     "breadcrumbs breadcrumbs main-nav";
   grid-template-columns: calc(var(--mascot-width) + 0.5rem) auto auto;
-  grid-template-rows: auto var(--tag-line-height) auto;
+  grid-template-rows: auto minmax(var(--tag-line-height), auto) auto;
 }
 header > h1 {
   grid-area: title;
@@ -142,10 +147,11 @@ header > nav.breadcrumbs {
 }
 
 header > .tag-line {
+  margin-top: 1rem;
   margin-bottom: 0;
 }
 header .mascot {
-  align-self: end;
+  align-self: start;
   width: var(--mascot-width);
   height: var(--mascot-height);
 }
